--- a/W05-Practical.tex
+++ b/W05-Practical.tex
@@ -30,7 +30,7 @@
 \restylefloat{table}
 
 \title{CS1002 W05 Practical Report}
-\author{Samuel Wykes}
+\author{Student ID: 180004823 Tutor: Adriana Wilde}
 
 \begin{document}
 \maketitle
@@ -248,8 +248,18 @@ using the variables within the Converter class. The use of conditionals was also
 the correct plurality. Lastly, good coding conventions such as variable naming (using appropriate names for variables and the correct casing 
 conventions), commenting, separating reused chunks of code into variables, and parameterisation.
 
+\newpage
+
 \section*{Extension}
 \section*{Design}
+
+\noindent \textbf{Extensions Attempted: }
+\begin{itemize}
+\item Conversion from imperial to metric as well as vice versa.
+\item User can choose the output format as a combination of any of the units.
+\item Create a GUI for the user to interact with.
+\end{itemize}
+
 For my extension, I decided to do all the tasks in the specification but also design a GUI for the progam rather than have it run through the command 
 line. I would do this using JavaFX and utilising FXML (a markup language) and CSS. I wanted to have it so the user can convert both from kilograms to 
 imperial and vice versa. Not only this but I wanted the user to choose the formatting for the output (i.e the user could choose to have the output in 
@@ -277,6 +287,96 @@ the main class which takes a string as input and returns a boolean if it matches
 
 \section*{Testing}
 
+Because a lot of the subroutines within this program had already been thoroughly tested in the last program I did not feel the need to do a trace 
+table for them again. Instead I am just going to test the things that have been newly added like the conversion from imperial to metric and using 
+certain formats that aren't stones, pounds, and ounces. First I am going to test the conversion from imperial to metric using a selection of different 
+input formats. I shall do this by using my converter and comparing the output to an online converter. Firstly I shall check the output for each individual unit.
+
+\noindent \textbf{Kilograms to Ounces Tests}
+\begin{table}[H]
+\begin{tabular}{lll}
+\textbf{Input} & \textbf{Expected Value} & \textbf{Returned Value} \\
+1              & 35                      & 35                      \\
+2              & 71                      & 71                      \\
+3              & 106                     & 106                     \\
+4              & 141                     & 141                     \\
+5              & 176                     & 176                     \\
+6              & 212                     & 212                     \\
+7              & 247                     & 247                     \\
+72             & 2540                    & 2540                    \\
+1000           & 35274                   & 35274                  
+\end{tabular}
+\end{table}
+
+\noindent \textbf{Kilograms to Pounds Tests}
+\begin{table}[H]
+\begin{tabular}{lll}
+\textbf{Input} & \textbf{Expected Value} & \textbf{Returned Value} \\
+1              & 2                       & 2                       \\
+2              & 4                       & 4                       \\
+3              & 6                       & 6                       \\
+4              & 8                       & 8                       \\
+5              & 11                      & 11                      \\
+6              & 13                      & 13                      \\
+7              & 15                      & 15                      \\
+72             & 158                     & 158                     \\
+1000           & 2204                    & 2204                   
+\end{tabular}
+\end{table}
+
+\noindent \textbf{Kilograms to Stones Tests}
+\begin{table}[H]
+\begin{tabular}{lll}
+\textbf{Input} & \textbf{Expected Value} & \textbf{Returned Value} \\
+10             & 1                       & 1                       \\
+20             & 3                       & 3                       \\
+30             & 4                       & 4                       \\
+40             & 6                       & 6                       \\
+50             & 7                       & 7                       \\
+60             & 9                       & 9                       \\
+70             & 11                      & 11                      \\
+72             & 11                      & 11                      \\
+1000           & 157                     & 157                    
+\end{tabular}
+\end{table}
+
+Next I wanted to test the kilogram to more unusual unit combinations conversion. I decided to test kilograms to stones and pounces and kilograms to pounds stones and ounces as it would be extremely impractical to do test tables for every combination. (Note: I did test the other combinations myself but the tables would take pages and pages.)
+
+\noindent \textbf{Kilograms to Stones and Ounces}
+\noindent (X, Y) Represents (Stones, Ounces)
+\begin{table}[H]
+\begin{tabular}{lll}
+\textbf{Input} & \textbf{Expected Value} & \textbf{Returned Value} \\
+1              & (0,35)                  & (0,35)                  \\
+20             & (3, 33)                 & (3, 33)                 \\
+30             & (4, 162)                & (4, 162)                \\
+40             & (6, 67)                 & (6, 67)                 \\
+50             & (7, 196)                & (7, 196)                \\
+60             & (9, 100)                & (9, 100)                \\
+70             & (11, 5)                 & (11, 5)                 \\
+72             & (11, 76)                & (11, 76)                \\
+1000           & (157, 106)              & (157, 106)             
+\end{tabular}
+\end{table}
+
+\noindent \textbf{Kilograms to Stones, Pounds, and Ounces}
+\noindent (X, Y, Z) Represents (Stones, Pounds, Ounces)
+\begin{table}[H]
+\begin{tabular}{lll}
+\textbf{Input} & \textbf{Expected Value} & \textbf{Returned Value} \\
+1              & (0, 2, 3)               & (0, 2, 3)               \\
+20             & (3, 2, 1)               & (3, 2, 1)               \\
+30             & (4, 10, 2)              & (4, 10, 2)              \\
+40             & (6, 4, 3)               & (6, 4, 3)               \\
+50             & (7, 12, 4)              & (7, 12, 4)              \\
+60             & (9, 6, 4)               & (9, 6, 4)               \\
+70             & (11, 0, 5)              & (11, 0, 5)              \\
+72             & (11, 4, 12)             & (11, 4, 12)             \\
+1000           & (157, 6, 10)            & (157, 6, 10)           
+\end{tabular}
+\end{table} 
+
+
 \section*{Evaluation}
 This program meets all the criteria of the original specification in that it can take in a kilogram input and convert this into stones, pounds, and 
 ounces. It also fulfills all of the criteria as specified by the extension. Firstly, the user can input in stones, pounds and ounces and this will be 
@@ -290,12 +390,12 @@ writing a GUI and made the code a lot more event driven. The GUI components ofte
 certain way.
 
 \section*{Conclusion}
-During the development of this program I was able to show multiple programming skills, first and forermost the use of conditionals was at the heart of 
+During the development of this program I was able to show multiple programming skills, first and foremost the use of conditionals was at the heart of 
 my program and I used them throughout the development. For example a conditional is used to validate that what the user entered was correct, following 
 this conditionals had to be used to detect which units the user wants to be converted and do the appropriate calculations.
 
 Another thing I achieved was decomposing the problem into multiple classes each further decomposing the problem with their own methods. For example 
-the class Unit was used so that I could have one method for conversion rather than individual methods for convwerting between every possible pair of 
+the class Unit was used so that I could have one method for conversion rather than individual methods for converting between every possible pair of 
 units. This reduced code reuse and made development faster.
 
 One thing I found quite difficult was making the GUI look decent as it's something I'm not fantastic at. I also found it difficult to figure out how 
